# ocgcore-ffi

./: .gitignore  .gitmodules  Cargo.toml  README.md
scripts/: install-emsdk.sh
src/: api.rs  backend.rs  build.rs  lib.rs  native.rs  types.rs
src/native/: mod.rs
src/wasm/: callbacks.rs  memory.rs  mod.rs
