[package]
name = "ocgcore-ffi"
description = "Low-level Rust bindings for edo9300/ygopro-core (aka `ocgcore`)"
version = "0.1.4"
license = "AGPL-3.0-only"
edition = "2024"
build = "src/build.rs"
repository = "https://github.com/COTFK/ocgcore-ffi"
keywords = ["yugioh", "ocgcore", "edopro", "ygopro-core", "ygopro"]
categories = ["external-ffi-bindings", "game-development", "simulation"]

[features]
default = []
bundled = []

[dependencies]
js-sys = "0.3.99"
once_cell = "1.21.4"
wasm-bindgen = "0.2.122"
web-sys = { version = "0.3.99", features = ["Window"] }

[build-dependencies]
cc = "1.2.63"
